# ML_Labs

./: .gitignore  LICENSE  README.md  requirements.txt
Credit_Default/: .gitignore  01_submit_job.py  02_download_outputs.py  03_generate_input_data.py  04_local_model_scoring.py  05_archive_job.py  06_cleanup_local.py  README.md  audit_report.md  config_template.json  pyproject.toml  scalability_utils.py
Credit_Default/src/: main.py
Feedback_Classification/: .gitignore  01_submit_job.py  02_download_outputs.py  03_generate_input_data.py  04_local_model_scoring.py  05_archive_job.py  06_cleanup_local.py  README.md  audit_report.md  config_template.json  requirements.txt  scalability_utils.py
Feedback_Classification/src/: main.py
Graduate_Admissions/: .gitignore  01_submit_job.py  02_download_outputs.py  03_generate_input_data.py  04_local_model_scoring.py  05_archive_job.py  06_cleanup_local.py  README.md  audit_report.md  config_template.json  requirements.txt  scalability_utils.py
Graduate_Admissions/src/: main.py
Student_Success/: .gitignore  01_submit_job.py  02_download_outputs.py  03_generate_input_data.py  04_local_model_scoring.py  05_archive_job.py  06_cleanup_local.py  README.md  audit_report.md  config_template.json  scalability_utils.py
Student_Success/src/: main.py
Utils/: .gitignore  06_cleanup_local.py  README.md  audit_model_inventory.py  audit_report.md  config_template.json  connect_to_workspace.py  requirements.txt  scalability_utils.py
